@@ -1,2 +1,2 @@
 @set ROOT=%~dp0..
-@"%ROOT%\runtime\bin\java" %JEXTRACT_JAVA_OPTIONS% -m org.openjdk.jextract/org.openjdk.jextract.JextractTool %*
+@"%ROOT%\runtime\bin\java" --enable-native-access=org.openjdk.jextract %JEXTRACT_JAVA_OPTIONS% -m org.openjdk.jextract/org.openjdk.jextract.JextractTool %*
